DX/dev/force-app/main/default/objects/CustomMetadetaDev__c/CustomMetadetaDev__c.object-meta.xml
<CustomObject>
    <label>カスタムメタデータ検証用obj</label>
    <nameField>
        <label>カスタムメタデータ検証用obj</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>