DX/dev/force-app/main/default/objects/CustomMetadetaDev__c/fields/GetURL__c.field-meta.xml
<CustomField>
    <fullName>GetURL__c</fullName>
    <formula>&quot;domain: &quot; + LEFT($Api.Partner_Server_URL_350 ,FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URLの引き込み</label>
    <type>Text</type>
</CustomField>