DX/dev/force-app/main/default/objects/CustomMetadetaDev__c/fields/IntegerA__c.field-meta.xml
<CustomField>
    <fullName>IntegerA__c</fullName>
    <label>数値A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>