DX/dev/force-app/main/default/objects/CustomMetadetaDev__c/fields/IntegerB__c.field-meta.xml
<CustomField>
    <fullName>IntegerB__c</fullName>
    <label>数値B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>