DX/dev/force-app/main/default/objects/CustomMetadetaDev__c/fields/item1__c.field-meta.xml
<CustomField>
    <fullName>item1__c</fullName>
    <formula>IntegerA__c / IntegerB__c</formula>
    <label>丸め確認用</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>